cmake_minimum_required(VERSION 3.0)
set(PROJECT_NAME HACKTON)
project(${PROJECT_NAME})
add_subdirectory(Externals/googletest)
add_subdirectory(BinaryTreeTraversal)
add_subdirectory(rotationArray)
add_subdirectory(SubArrayWithGivenSum)
add_subdirectory(OccuranceOfBinaryNumber)
add_subdirectory(OddOccurrenceInArray)