set(PROJECT_NAME LinkListTest)
set(CPP ../src/LinkList.cpp Test_Main.cpp Test_LinkList.cpp)
set(HEADER ../src/LinkList.h ../src/Node.h Test_LinkList.h)
include_directories(../../libs/googletest-1.10.x/googletest)
include_directories(../src)
add_executable(${PROJECT_NAME} ${CPP} ${HEADER})
target_link_libraries(${PROJECT_NAME} PUBLIC gtest gtest_main)
